@@ -1,8 +1,16 @@
 Revision history for Perl extension Metabrik.
 
 1.09
+   - RENAME: core::shell: help_show_brik_attributes => help_show_base_attributes
+   - RENAME: core::shell: help_show_brik_commands => help_show_base_commands
+   - RENAME: core::shell: comp_show_brik_attributes => comp_show_base_attributes
+   - RENAME: core::shell: comp_show_brik_commands => comp_show_base_commands
+   - UPDATE: core::shell: rework of help/completion scheme
    - UPDATE: core::shell: help Command rewritten to show help for Metabrik only (not Term:Shell)
    - bugfix: core::shell: use unique match to run Commands
+   - new: core::shell: get_help/comp_attributes and get_help/comp_commands Commands
+   - new: Metabrik: brik_base_attributes, brik_inherited_attributes, brik_own_attributes Commands
+   - new: Metabrik: brik_base_commands, brik_inherited_commands, brik_own_commands Commands
 
 1.08 Thu Mar 19 06:48:34 CET 2015
    - FEATURE: core::shell: run executable commands found in PATH through system Command
